<resources>
    <string name="app_name">StroyBack</string>
    <string name="menu_title_home">Главная</string>
    <string name="menu_title_history">История</string>
    <string name="menu_title_confirmations">Подтверждения</string>repeat_sending
    <string name="menu_title_profile">Профиль</string>

    <string name="authorization">Авторизация</string>
    <string name="email">"Email</string>
    <string name="password">Пароль</string>
    <string name="forgot_your_password_issue">Забыли пароль?</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="support">Тех поддержка:</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="fullname">Имя и фамилия</string>
    <string name="name_organization">Название организации</string>
    <string name="mail">Почта</string>
    <string name="manager_fullname">ФИО Менеджера</string>
    <string name="i_give_consent_processing_personal_data">Даю согласие на <u>Обработку персональных данных</u></string>
    <string name="i_give_consent">Даю согласие на</string>
    <string name="processing_personal_data">Обработку персональных данных</string>
    <string name="already_account">Уже есть аккаунт?</string>
    <string name="login">Авторизуйтесь</string>
    <string name="your_phone_number">Ваш номер телефона</string>
    <string name="enter_phone_number_account_registration">Введите номер телефона для регистрации\n аккаунта</string>
    <string name="confirm_your_account">Подтвердите аккаунт</string>
    <string name="enter_last_digits">Введите последние 4 цифры вызова\n на</string>
    <string name="not_receive_code">Не получили код подтверждения?</string>
    <string name="repeat_sending"><u>Повторить отправку</u></string>
    <string name="enter_reset_code">Введите код сброса</string>
    <string name="enter_pin_code">Введите пин код, который пришёл вам\n на почту</string>
    <string name="forgot_your_password">Забыли пароль</string>
    <string name="enter_your_email_address">Введие свою почту для получения\n кода сброса пароля</string>
    <string name="change_password">Сменить пароль</string>
    <string name="my_balance">Мой баланс</string>
    <string name="scan">Сканировать</string>
    <string name="buy">Купить</string>
    <string name="awards">Награды</string>
    <string name="personal_account">Персональный счет</string>
    <string name="personal_account_number">Персональный номер счета</string>
    <string name="your_operations">Ваши операции</string>
    <string name="view_all">Посмотреть все</string>
    <string name="scan_qr">Сканировать QR</string>
    <string name="cost_item">Стоимость номенклатуры</string>
    <string name="purchase_cards">Приобретение карт</string>
    <string name="confirm_purchase">Подтвердите покупку</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="notifications">Уведомления</string>
    <string name="change_data">Изменить данные</string>
    <string name="change_email">Изменить почту</string>
    <string name="to_change_password">Изменить пароль</string>
    <string name="sending_data">Отправка данных ...</string>
    <string name="loading_data">Подгрузка данных ...</string>
    <string name="purchase">Покупка ...</string>
    <string name="rub">₽</string>
    <string name="gift_card">Подарочная карта</string>
    <string name="money_participation_lottery">Деньги+участие в лотерее</string>
    <string name="nominal">Номинал</string>
    <string name="scan_qr_code">Сканирование QR кода</string>
    <string name="card_purchase">Покупка карты</string>
    <string name="purchase_success">Покупка успешно\n совершена</string>
    <string name="scanning_qr_code">Сканирование QR кодов обязательно\n должно быть осуществлено в пределах 50\n метров от точки регистрации</string>
    <string name="confirm_receipt_card">При получении карты от менеджера,\n обязательно подтвердите получение карты\n в приложении</string>
    <string name="insufficient_funds">Ошибка!\n На вашем балансе\n недостаточно средств</string>
    <string name="remind_scanning_qr">Напоминаем, что сканирование QR кодов\n возможно только единожды</string>
    <string name="qrcode_registered">Ошибка!\n Данный QR код уже\n зарегистрирован в нашей\n системе</string>
    <string name="qrcode_scanned">Поздравляем!\n Ваш QR код\n успешно отсканирован</string>
    <string name="your_bonus_balance_replenished">Ваш бонусный баланс пополнен на</string>
    <string name="user_agreement">Политика обработки персональных данных</string>
    <string name="card">Карта</string>
    <string name="nominal_card">Номинал Карты</string>
    <string name="thank_you_for_registering">Спасибо за регистрацию! Теперь Вы можете\n получать бонусы за приобретение нашей\n продукции!</string>
    <string name="registration_completed_successfully">Поздравляем!\n Регистрация успешно\n завершена!</string>
    <string name="new_version_released">Выпущена новая версия приложения StroyBack</string>

    <string name="email_hint">Ваша почта</string>
    <string name="password_hint">Пароль</string>
    <string name="fullname_hint">Ваше имя и фамилия</string>
    <string name="name_organization_hint">Название как в 1с</string>
    <string name="manager_fullname_hint">Фио вашего менеджера</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>

    <string name="enter">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="send_code">Отправить код</string>
    <string name="confirm">Подтвердить</string>
    <string name="send_reset_code">Отправить код сброса</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="exit"><u>Выйти</u></string>
    <string name="continues">Продолжить</string>
    <string name="settings">Настройки</string>
    <string name="delete">Удалить</string>
    <string name="ok">OK</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="close">Закрыть</string>
    <string name="detailed">Подробнее</string>

    <string name="message">Сообщение</string>
    <string name="error">Ошибка</string>
    <string name="error_correct_name">Некорректное имя пользователя</string>
    <string name="error_correct_email">Некорректное имя почты</string>
    <string name="error_correct_organization_name">Некорректное название организации</string>
    <string name="error_correct_phone">Введите корректный номер телефона</string>
    <string name="error_give_consent_personal_data">Дайте согласие на обработку персональных данных</string>
    <string name="error_allow_access_location">Разрешите доступ к геопозиции или переместитесь туда, где ловят спутники</string>
    <string name="error_failed_on_getting_current_location">Не удалось получить текущее местоположение</string>
    <string name="error_code_length">Длина кода подтверждения должна быть равна 4</string>
    <string name="error_password_length">Длина пароля должна быть не менее 5 символов</string>
    <string name="error_new_password_length">Длина нового пароля должна быть не менее 5 символов</string>
    <string name="error_incorrect_code">Не верный код подтверждения</string>
    <string name="error_password_dont_match">Пароли не совпадают</string>
    <string name="error_geolocation">Ошибка геолокации</string>
    <string name="update_password">Пароль был обновлен</string>
    <string name="no_internet">Вероятно, соединение с интернетом прервано.\nПожалуйста повторите попытку позже</string>
    <string name="no_response_remote_service">Нет ответа от удалённой службы.\nПожалуйста повторите попытку позже</string>
    <string name="exit_account">Вы уверены, что хотите выйти\n из аккаунта?</string>
    <string name="location_permission_required">Требуется разрешение на местоположение</string>
    <string name="please_enable_location">Пожалуйста, включите разрешения на местоположение в настройках приложения</string>
    <string name="you_have_confirmed_card">Вы подтвердили получение карты</string>
    <string name="camera_permission_required">Требуется разрешение на работу с камерой</string>
    <string name="camera_required_reboot">Требуется перезагрузка экрана для работы с камерой</string>
    <string name="please_enable_camera">Пожалуйста, включите разрешения на работу с камерой в настройках приложения</string>
    <string name="functional_development">Функционал в разработке</string>
    <string name="mark_notifications">Отметить все уведомления как прочитанные?</string>
    <string name="error_no_data_promotion">Данных по акции нет</string>

    <string name="slide1_title">Добро пожаловать!</string>
    <string name="slide1_text">Начните получать\n дополнительный доход с\n помощью бонусной программы\n StroyBack.</string>
    <string name="slide2_title">Сканируйте QR коды</string>
    <string name="slide2_text">Вы их найдете на продукции,\n участвующей в акции.</string>
    <string name="slide3_title">Получайте бонусы</string>
    <string name="slide3_text">С каждого отсканированного\n кода вы получаете кешбек в\n виде бонусов.</string>
    <string name="slide4_title">Превращайте бонусы\n в деньги.</string>
    <string name="slide4_text">Выводите по курсу\n 1 бонус = 1 рубль.</string>

</resources>