<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/welcome"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/fullname"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <EditText
                    android:id="@+id/fullname_editText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_style"
                    android:ems="10"
                    android:hint="@string/fullname_hint"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullname" />

                <TextView
                    android:id="@+id/organization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/name_organization"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullname_editText" />

                <EditText
                    android:id="@+id/organization_editText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_style"
                    android:ems="10"
                    android:hint="@string/name_organization_hint"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/organization" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/mail"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/organization_editText" />

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_style"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <TextView
                    android:id="@+id/manager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/manager_fullname"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_editText" />

                <EditText
                    android:id="@+id/manager_editText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_style"
                    android:ems="10"
                    android:hint="@string/manager_fullname_hint"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/manager" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/password"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/manager_editText" />

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/input_style"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/roundstyle_btn"
                    android:backgroundTint="@color/blue"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/poppins_semibold"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_editText">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyCheckBoxStyle"/>

                    <TextView
                        android:id="@+id/data_processing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/i_give_consent_processing_personal_data"
                        android:textColor="@color/blue"
                        android:textColorLink="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_button">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/already_account"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/grey"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/authorization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/blue"
                        android:textSize="12sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar" android:layout_width="wrap_content"
        android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>